# group_x

./: .gitignore  README.md  database.js  db_dump.sql  package.json  sqlcode.txt
backend/: .env_example  app.js  create_token.js  database.js  package-lock.json
backend/models/: grade_model.js  student_model.js
backend/routes/: grade.js  login.js  student.js
bank-automat/: CMakeLists.txt  environment.cpp  environment.h  grade.cpp  grade.h  grades.cpp  grades.h  grades.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  studentdata.cpp  studentdata.h  studentdata.ui  studentinfo.cpp  studentinfo.h  studentinfo.ui  style.qss
